# epigos-python

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: auto-approve-dependabot.yml  auto-merge-dependabot.yml  release-please.yml  tests.yaml
epigos/: __init__.py  __version__.py  client.py  exceptions.py  typings.py
epigos/core/: __init__.py  base.py  classification.py  object_detection.py  project.py  uploader.py
epigos/data_classes/: dataset.py  project.py
epigos/dataset/: __init__.py  core.py  utils.py
epigos/utils/: __init__.py  annotations.py  dataset.py  image.py  prediction.py
tests/: conftest.py  test_client.py
tests/core/: test_classification_model.py  test_object_detection_model.py  test_project.py  test_uploader.py
tests/data_classes/: test_prediction_utils.py
tests/dataset/: test_detection_dataset.py
tests/utils/: test_dataset_utils.py  test_image_utils.py  test_prediction_utils.py
